# powder

./: .coverage  .gitignore  Claude.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: keepalive
.github/workflows/: keepalive.yml  pages.yml
docs/: TESTING.md
powder/: __init__.py  __main__.py  cache.py  cli.py  forecast.py  resorts.py
powder/data/: README.md  resorts.json  resorts_global.json
powder/providers/: MODELS.md  __init__.py  base.py  bom.py  ecmwf.py  icon.py  jma.py  nws.py  open_meteo.py  weatherapi.py
powder/web/: index.html
powder/web/css/: style.css
powder/web/data/: forecasts.json
powder/web/js/: app.js
scripts/: README.md  collect_global_resorts.py  iview.py  merge_resorts.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: README.md  test_live_api.py
tests/fixtures/: resorts_sample.json
tests/fixtures/api_responses/: nws_forecast.json  nws_grid_point.json  open_meteo_forecast.json
tests/integration/: README.md  test_cli.py
tests/unit/: README.md  test_cache.py  test_forecast.py  test_resorts.py
tests/unit/providers/: test_bom.py  test_ecmwf.py  test_icon.py  test_jma.py  test_nws.py  test_open_meteo.py
tests/web/: README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.js
tests/web/e2e/: detail_panel.spec.ts  filters.spec.ts  map.spec.ts  mobile.spec.ts  tablet.spec.ts
tests/web/playwright-report/: index.html
tests/web/unit/: app.test.js  setup.js
