[project]
name = "powder"
version = "0.1.0"
description = "Ski resort snowfall forecast tracker"
requires-python = ">=3.12,<4"
dependencies = [
    "requests>=2.31.0",
    "requests-cache>=1.2.0",
    "python-dateutil>=2.8.2",
]

[project.scripts]
powder = "powder.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "powder"}]
include = ["powder/data/*.json"]

[dependency-groups]
dev = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "timezonefinder (>=8.2.1,<9.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]
