[project]
name = "powder"
version = "0.1.0"
description = "Ski resort snowfall forecast tracker"
requires-python = ">=3.12,<4"
dependencies = [
    "requests>=2.31.0",
    "requests-cache>=1.2.0",
    "python-dateutil>=2.8.2",
]

[project.scripts]
powder = "powder.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "powder"}]
include = ["powder/data/*.json"]

[dependency-groups]
dev = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "timezonefinder (>=8.2.1,<9.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]
test = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
    "freezegun>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests",
    "e2e: End-to-end tests with live APIs",
    "slow: Slow tests (live APIs, skip by default)",
    "providers: Weather provider tests",
    "forecast: Forecast calculation tests",
    "resorts: Resort data tests",
    "elevation: Elevation calculation tests",
    "cli: CLI tests",
    "cache: Cache tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["powder"]
omit = ["powder/web/*"]

[tool.coverage.report]
show_missing = true
fail_under = 75
